--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -55,11 +55,11 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 6
-    gaps_out = 6
-    border_size = 4
-    col.active_border = $mauve
-    col.inactive_border = $crust 
+    gaps_in = 2
+    gaps_out = 2 
+    border_size = 2
+    col.active_border = rgb(ffffff)
+    col.inactive_border = rgb(000000)
 
     layout = dwindle
 }
@@ -67,7 +67,7 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 12
+    rounding = 1
 
     drop_shadow = yes
     shadow_range = 4
