--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,7 +12,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,1920x1080@60,0x0,1
-monitor=HDMI-A-1, 1920x1080@75, auto, 1 
+monitor=HDMI-A-1, 1920x1080, auto, 1 
 
 # workspace rules
 workspace = 1, monitor:HDMI-A-1
