Changes: nvim and hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -110,12 +110,18 @@ gestures {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
+windowrulev2 = workspace 9 silent, class:^(spotify)$
+windowrulev2 = workspace 9 silent, class:^(discord)$
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, W, exec, brave
 bind = $mainMod SHIFT, W, exec, firefox
+bind = $mainMod SHIFT, D, exec, discord
+bind = $mainMod SHIFT, S, exec, spotify
+bind = $mainMod, O, exec, obsidian
 bind = $mainMod, RETURN, exec, wezterm start
 bind = $mainMod, Q, killactive, 
 bind = $mainMod SHIFT, Q, exit, 
